[package]
name = "rust-metaplex-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
chrono = "0.4.19"
envy = "0.4.2"
mpl-token-metadata = "1.4.3"
serde = "1.0.145"
serde_json = "1.0.85"
solana-account-decoder = "1.14.5"
solana-client = "1.14.5"
solana-sdk = "1.14.5"
spl-associated-token-account = "1.1.1"
spl-token = "3.5.0"
url = { version = "2.3.1", features = ["serde"] }
pyo3 = { version = "0.17.2", features = ["extension-module"]}